--- a/index.html
+++ b/index.html
@@ -23,9 +23,20 @@
     <main>
       <h1>Kauê Cavalcante</h1>
       <p>Meu nome é <strong>Kauê Cavalcante</strong>, tenho 17 anos.</p>
-      <p>Atualmente estou no 3 ano do ensino medio e estou estagiando na <a href="https://www.nextopinion.com.pt/" target="_blank"><strong>Next opinion</strong></a> , nela estou aprendendo programação e colocndo em patrica.</p>
-      <p>Gosto muito de investimentos e de finanças </p>
+      <p>Atualmente estou no 3 ano do ensino medio e estou estagiando na <a href="https://www.nextopinion.com.pt/" target="_blank" class="externo"><strong>Next opinion</strong></a>, nela estou aprendendo programação e colocndo em patrica.</p>
+      <p>Gosto muito de finanças e de investimento. </p>
       <p>Nas ferias me aprofundei bastente em dropshipping, coloquei em pratica, no começo deu muito certo mas tive que fechar por conta de gastos fora do teto.</p>
+
+      <section class="Imagem" id="img01">
+      <p>Gosto muito de fazer <br> qualquer tipo de esporte, <br>
+      meu esporte favorito é o Judô, <br>
+      ja viajei bastante para competir e <br>
+      ja ganhei bastante medalha.</p> 
+      <ul>
+          <li class="judo">1x Campeão do Norte nordeste
+          <li class="judo">3x Campeão do Alagoano
+      </ul>
+      </section>
       
       <aside>
         <h3>Um pouco do que fiz!</h3>
