--- a/index.html
+++ b/index.html
@@ -16,16 +16,23 @@
 
     <nav> <!--Menu-->
         <a href="#">Home</a>
-        <a href="#">GitHub</a>
-        <a href="#">Instagram</a>
+        <a href="https://github.com/kauecavalcante" target="_blank">GitHub</a>
+        <a href="https://www.instagram.com/kauecavalcantee" target="_blank">Instagram</a>
     </nav>
 
     <main>
       <h1>Kauê Cavalcante</h1>
       <p>Meu nome é <strong>Kauê Cavalcante</strong>, tenho 17 anos.</p>
-      <p>Atualmente estou no 3 ano do ensino medio e estou estagiando na <a href="https://www.nextopinion.com.pt/" target="_blank" class="externo"><strong>Next opinion</strong></a>, nela estou aprendendo programação e colocndo em patrica.</p>
-      <p>Gosto muito de finanças e de investimento. </p>
-      <p>Nas ferias me aprofundei bastente em dropshipping, coloquei em pratica, no começo deu muito certo mas tive que fechar por conta de gastos fora do teto.</p>
+      <p>Atualmente estou no 3 ano do ensino medio e estou estagiando na <a href="https://www.nextopinion.com.pt/" target="_blank" class="externo"><strong>Next opinion</strong></a>, nela estou aprendendo programação e colocando em patrica. Gosto muito de finanças e de investimento.</p>
+      <p>Nas ferias me aprofundei bastente em<abbr class="drop" title="Dropshipping ou remessa direta é uma técnica de gestão da cadeia logística na qual o revendedor não mantém os produtos em estoque, mas oferta e comercializa produtos que estão no estoque do fornecedor em qualquer lugar do mundo."> <strong>dropshipping</strong></abbr>, no começo deu muito certo mas tive que fechar por conta de gastos fora do teto.</p>
+     
+      <div class="container">
+          <img src="perfil.jpg" alt="Foto-chile" class="chile">
+          <p class="chile01">Gosto muito de viajar, de conhecer lugares novos, culturas, comidas e etc... 
+           Acessando meu <abbr class="drop" title="GitHub é uma plataforma de hospedagem de código-fonte e arquivos com controle de versão usando o Git. "><strong>Github</strong></abbr> você encontrara meus repositorios, neles estão meus exercicios e alguns projetos que fiz, e acessando meu instagram você me conhecera  um pouco melhor e ficara por dentro das minhas loucuras. Nas horas vagas gosto de jogar um PS4 com meus amigos, assistir filmes e maratonar series de respeito!!
+
+          </p>
+      </div>
 
       <section class="Imagem" id="img01">
       <p>Gosto muito de fazer <br> qualquer tipo de esporte, <br>
