--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <p>Nas ferias me aprofundei bastente em<abbr class="drop" title="Dropshipping ou remessa direta é uma técnica de gestão da cadeia logística na qual o revendedor não mantém os produtos em estoque, mas oferta e comercializa produtos que estão no estoque do fornecedor em qualquer lugar do mundo."> <strong>dropshipping</strong></abbr>, no começo deu muito certo mas tive que fechar por conta de gastos fora do teto.</p>
      
       <div class="container">
-          <img src="perfil.jpg" alt="Foto-chile" class="chile">
+              <img src="perfil.jpg" alt="Foto-perfil" class="chile">
           <p class="chile01">Gosto muito de viajar, de conhecer lugares novos, culturas, comidas e etc... 
            Acessando meu <abbr class="drop" title="GitHub é uma plataforma de hospedagem de código-fonte e arquivos com controle de versão usando o Git. "><strong>Github</strong></abbr> você encontrara meus repositorios, neles estão meus exercicios e alguns projetos que fiz, e acessando meu instagram você me conhecera  um pouco melhor e ficara por dentro das minhas loucuras. Nas horas vagas gosto de jogar um PS4 com meus amigos, assistir filmes e maratonar series de respeito!!
 
