--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <ul>
             <li><a  class="ul" href="https://bit.ly/projetoandroid" target="_blank">Artigo sobre o Bugdroid</a>
             <p class="ul">Esse artigo foi feito para falar um pouco de como surgiu o Bugdroid, o mascote do Android.</p></li>
-            <li><a class="ul" href="https://bit.ly/Cordelmoderno" target="_blank">Cordel Moderno</a> <p class="ul">Fiz esse site para praticar algumas coisas de CSS.</p></li>
+            <li><a class="ul" href="https://bit.ly/Cordelmoderno" target="_blank">Cordel Moderno</a> <p class="ul">Fiz esse site para praticar imagens como fundo de site (CSS).</p></li>
         </ul>
 
 
