--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <p>Gosto muito de fazer <br> qualquer tipo de esporte, <br>
       meu esporte favorito é o Judô, <br>
       ja viajei bastante para competir e <br>
-      ja ganhei bastante medalha.</p> 
+      ja ganhei bastante medalhas.</p> 
       <ul>
           <li class="judo">1x Campeão do Norte nordeste
           <li class="judo">3x Campeão do Alagoano
