--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <main>
       <h1>Kauê Cavalcante</h1>
-      <p>Meu nome é <strong>Kauê Cavalcante</strong>, tenho 17 anos.</p>
+      <p>Meu nome é <strong>Kauê Cavalcante Wanderley</strong>, tenho 17 anos.</p>
       <p>Atualmente estou no 3 ano do ensino medio e estou estagiando na <a href="https://www.nextopinion.com.pt/" target="_blank" class="externo"><strong>Next opinion</strong></a>, nela estou aprendendo programação e colocando em patrica. Gosto muito de finanças e de investimento.</p>
       <p>Nas ferias me aprofundei bastente em<abbr class="drop" title="Dropshipping ou remessa direta é uma técnica de gestão da cadeia logística na qual o revendedor não mantém os produtos em estoque, mas oferta e comercializa produtos que estão no estoque do fornecedor em qualquer lugar do mundo."> <strong>dropshipping</strong></abbr>, no começo deu muito certo mas tive que fechar por conta de gastos fora do teto.</p>
      
